--- a/src/app/modal/registration-modal/registration-modal.component.html
+++ b/src/app/modal/registration-modal/registration-modal.component.html
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
-<span class="registration" data-toggle="modal"
-      data-target="#registrationModal">
+<span class="btn btn-outline-secondary celLength curve" data-toggle="modal"
+      data-target="#registrationModal" (click)="checkFields()">
   {{'Modal.Registration.Btn' | translate}}
 </span>
 <!-- Modal -->
@@ -16,27 +16,21 @@
           </button>
         </div>
         <div class="modal-body">
-          <h2>
-            {{'Modal.Registration.Btn' | translate}} :
-          </h2>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text celLength">{{'Modal.Registration.Login' | translate}} :</span>
-            </div>
-            <input type="text" class="form-control" id="registration"
-                   placeholder="{{'Modal.Registration.Login' | translate}}">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text celLength">{{'Modal.Registration.Password' | translate}} :</span>
-            </div>
-            <input type="password" class="form-control" id="password"
-                   placeholder="{{'Modal.Registration.Password' | translate}}">
+          <h3 id="messageError">
+            <span class="color" style="color: #5d2222;">
+              {{'Modal.Registration.NotVerify' | translate}}
+            </span>
+          </h3>
+          <div id="messageUser">
+            <span class="color">{{'Modal.Registration.Person' | translate}}&nbsp;:</span>
+            <span class="color" style="font-weight: bolder;">"{{person.screenName}}"&nbsp;</span>
+            <img src="../../../assets/images/persons/{{person.image}}" class="avatar-64"><br/>
+            {{person.firstName}}&nbsp;{{person.lastName}}<span class="color">?</span>
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">{{'Modal.Close' | translate}}</button>
-          <button type="button" class="btn btn-light btn-outline-dark" (click)='eventExecute()' data-dismiss="modal">
+          <button id="submit" type="button" class="btn btn-light btn-outline-dark" (click)='eventExecute()' data-dismiss="modal">
             {{'Modal.Registration.Btn' | translate}}
           </button>
         </div>
