--- a/src/app/persons/persons.component.html
+++ b/src/app/persons/persons.component.html
@@ -1,7 +1,7 @@
 <hr/>
 <h2>
   {{'Persons.Title' | translate}}
-  <a routerLink="/person/detail/new" class="btn btn-outline-secondary" style="float: right;">
+  <a routerLink="/registration" class="btn btn-outline-secondary" style="float: right;">
     {{'Persons.NewPerson' | translate}}
   </a>
 </h2>
