--- a/src/app/modal/add-tag/add-tag.component.css
+++ b/src/app/modal/add-tag/add-tag.component.css
@@ -11,13 +11,5 @@
   color:#888888;
 }
 .curve{
-  border-radius: inherit;
-}
-.registration{
-  float: right;
-  color: #607D8B;
-}
-.registration:hover{
-  color: #444444;
-  cursor: pointer;
+  border-radius: 0px 5px 5px 0;
 }
