--- a/src/app/modal/add-tag/add-tag.component.html
+++ b/src/app/modal/add-tag/add-tag.component.html
@@ -1,28 +1,28 @@
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-outline-secondary celLength curve" data-toggle="modal"
-        data-target="#updateModal">
-  {{'Modal.Update.Btn' | translate}}
+        data-target="#addModal">
+  {{'Modal.Add.Btn' | translate}}
 </button>
 <!-- Modal -->
-<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
      aria-hidden="true">
   <h2>
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title color" id="exampleModalLabel">{{'Modal.Update.Title' | translate}}</h5>
+          <h5 class="modal-title color" id="exampleModalLabel">{{'Modal.Add.Title' | translate}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <span class="color">{{'Modal.Update.Btn' | translate}} :</span>&nbsp;"{{name}}"&nbsp;<span
+          <span class="color">{{'Modal.Add.Message' | translate}} :</span>&nbsp;"{{name}}"&nbsp;<span
           class="color">?</span>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">{{'Modal.Close' | translate}}</button>
-          <button type="button" class="btn btn-light btn-outline-dark" (click)='eventExecute()' data-dismiss="modal">
-            {{'Modal.Update.Btn' | translate}}
+          <button type="button" class="btn btn-light btn-outline-dark" (click)='eventExecuteAdd()' data-dismiss="modal">
+            {{'Modal.Add.Btn' | translate}}
           </button>
         </div>
       </div>
