--- a/src/app/news/news-info/news-tags/news-tags.component.html
+++ b/src/app/news/news-info/news-tags/news-tags.component.html
@@ -1,7 +1,6 @@
 <div class="news-tags">
   <span class="tag" routerLink="/tag/{{tag.tag}}" *ngFor="let tag of tags, let last = last">
-    {{tag.tag}}
-    <span *ngIf="!last">,&nbsp;</span>
+    {{tag.tag}}<span *ngIf="!last">,&nbsp;</span>
     <span *ngIf="last">.</span>
   </span>
 </div>
