--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -32,7 +32,7 @@
       </div>
       <hr>
       <h3>
-        <span>Информация о пользователе&nbsp;:</span><br/>
+        <span>{{'Persons.Details.Info' | translate}}&nbsp;:</span><br/>
         <span style="font-weight: bolder;">"{{person.screenName}}"&nbsp;</span>
         <img src="../../../assets/images/persons/{{person.image}}" class="avatar-64">&nbsp;
         {{person.firstName}}&nbsp;{{person.lastName}}&nbsp;
